# umrah-mandiri-bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fix_404.sh  fix_all.sh  nixpacks.toml  start_all.sh
backend/: .env.example  Dockerfile  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  requirements.txt.backup
backend/api/routes/: budget_routes.py
backend/app/: config.py  main.py
backend/app/agents/: base_agent.py  budget_agent.py  doa_agent.py  emergency_agent.py  guide_agent.py  navigation_agent.py  orchestrator.py  prayer_time_agent.py
backend/app/api/v1/: advanced.py  budget_routes.py  chat.py  umrah.py  users.py
backend/app/core/: middleware.py
backend/app/models/: user.py
backend/app/rag/: advanced_retriever.py  embeddings.py  groq_llm.py  llm.py  retriever.py  vector_store.py
backend/app/services/: ai_service.py  free_maps.py  free_prayer_times.py
backend/data/knowledge_base/: README.md
scripts/: railway-setup-steps.txt  seed_knowledge.py  verify-deployment.sh
telegram-bot/: .env.example  Dockerfile  api_client_fixed.py  bot.py  bot.py.backup  bot.py.old  config.py  fix_imports.py  keyboards.py  nixpacks.toml  railway.toml  requirements.txt  user_manager.py
telegram-bot/handlers/: budget_handler.py  doa.py  guide.py  start.py
